[Back End] feat: aprimorar a gestão de estacionamento com associação de proprietários e controle de acesso baseado em funções